tests/ui/nll/user-annotations/closure-substs.stderr
error: lifetime may not live long enough
  --> $DIR/closure-substs.rs:6:16
   |
LL | fn foo<'a>() {
   |        -- lifetime `'a` defined here
...
LL |         return x;
   |                ^ returning this value requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/closure-substs.rs:13:16
   |
LL |     |x: &i32| -> &'static i32 {
   |         - let's call the lifetime of this reference `'1`
LL |         return x;
   |                ^ returning this value requires that `'1` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/closure-substs.rs:20:9
   |
LL | fn bar<'a>() {
   |        -- lifetime `'a` defined here
...
LL |         b(x);
   |         ^^^^ argument requires that `'a` must outlive `'static`

error[E0521]: borrowed data escapes outside of closure
  --> $DIR/closure-substs.rs:27:9
   |
LL |     |x: &i32, b: fn(&'static i32)| {
   |      -  - let's call the lifetime of this reference `'1`
   |      |
   |      `x` is a reference that is only valid in the closure body
LL |         b(x);
   |         ^^^^
   |         |
   |         `x` escapes the closure body here
   |         argument requires that `'1` must outlive `'static`

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0521`.
